# feishu-auth-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: watch-openclaw-feishu-upstream.yml
examples/: feishu-event.json
scripts/: upstream_watch.py
src/feishu_auth_kit/: __init__.py  agent_runtime.py  app_registration.py  cardkit.py  claude_adapter.py  cli.py  client.py  device_flow.py  domains.py  message_context.py  models.py  native_agent_tools.py  native_contract.py  orchestration.py  owner_policy.py  probe.py  runtime_cards.py  scopes.py  token_store.py
tests/: test_agent_runtime.py  test_app_registration.py  test_claude_integration.py  test_cli.py  test_client.py  test_device_flow.py  test_message_context.py  test_native_agent_tools.py  test_native_contract.py  test_orchestration.py  test_owner_policy.py  test_probe.py  test_runtime_cards.py  test_scopes.py  test_token_store.py
